--- a/public/app.css
+++ b/public/app.css
@@ -92,7 +92,8 @@ a{color:inherit;text-decoration:none}
 	font-size:12px;
 }
 .login-form .group .button{
-	background:#1161ee;
+	
+	background:#080808;
 }
 .login-form .group label .icon{
 	width:15px;
