--- a/public/app.css
+++ b/public/app.css
@@ -1,14 +1,20 @@
 body{
 	margin:0;
-	color:#6a6f8c;
-	background:#c8c8c8;
+	color:#0b29d3;
+	background-image:linear-gradient(Blue,black,red);;
 	font:600 16px/18px 'Open Sans',sans-serif;
 }
 *,:after,:before{box-sizing:border-box}
 .clearfix:after,.clearfix:before{content:'';display:table}
 .clearfix:after{clear:both;display:block}
-a{color:inherit;text-decoration:none}
+a{color:#fff;text-decoration:none}
 
+.login-wrap img{
+	border-radius: 60%;
+	width: 325px;
+	position:relative;
+	margin: 23px 17px;
+}
 
 .login-wrap{
 	width:100%;
@@ -16,7 +22,7 @@ a{color:inherit;text-decoration:none}
 	max-width:525px;
 	min-height:670px;
 	position:relative;
-	background:url(log.jpg) no-repeat center;
+	background:url(log.jpg) no-repeat;
 	box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
 }
 .login-html{
@@ -24,8 +30,8 @@ a{color:inherit;text-decoration:none}
 	height:100%;
 	position:absolute;
 	padding:90px 70px 50px 70px;
-	background:rgba(40,57,101,.9);
-}
+	margin: -97px 0px;
+	background: rgb(17 27 53 / 90%);}
 .login-html .sign-in-htm,
 .login-html .sign-up-htm{
 	top:0;
